[gd_scene load_steps=15 format=3 uid="uid://dsvajfvqo4iwf"]

[ext_resource type="Texture2D" uid="uid://b37giaqigvd08" path="res://Art/Player/PlayerHead.png" id="1_um8lo"]
[ext_resource type="Script" uid="uid://dpktp6ibetl7v" path="res://Scripts/Player.gd" id="1_x3d5u"]
[ext_resource type="Texture2D" uid="uid://ddmwp4rvin4ic" path="res://Art/Particle/BasicParticle.png" id="2_qe6vn"]
[ext_resource type="Texture2D" uid="uid://dg3q6x45sxsm7" path="res://Art/Player/PlayerEye.png" id="3_j0pa4"]
[ext_resource type="AudioStream" uid="uid://38aah4d76l80" path="res://Audio/SFX/littleguyshoot.wav" id="4_ec3bh"]
[ext_resource type="Texture2D" uid="uid://bwxp8txwx24ta" path="res://Art/Player/Mouth.png" id="5_lb1et"]
[ext_resource type="AudioStream" uid="uid://dyb7wl5il54jf" path="res://Audio/SFX/balloon.wav" id="7_4u6q8"]
[ext_resource type="Script" uid="uid://cxdcu3r7iarn6" path="res://Scripts/Engine.gd" id="8_6e0b6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4o3m0"]
friction = 0.8
bounce = 0.4

[sub_resource type="CircleShape2D" id="CircleShape2D_hnvup"]
radius = 35.2278

[sub_resource type="CircleShape2D" id="CircleShape2D_j0pa4"]
radius = 50.6952

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6e0b6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opta0"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_4u6q8"]
radius = 56.2228

[node name="Player" type="RigidBody2D" groups=["Player"]]
collision_layer = 129
collision_mask = 3
mass = 0.3
physics_material_override = SubResource("PhysicsMaterial_4o3m0")
gravity_scale = 2.0
can_sleep = false
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 100
linear_damp = 1.0
script = ExtResource("1_x3d5u")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
amount = 50
texture = ExtResource("2_qe6vn")
lifetime = 0.3
gravity = Vector2(0, 0)
color = Color(1, 1, 1, 0.270588)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -63.0
offset_top = -63.0
offset_right = 63.0
offset_bottom = 63.0
pivot_offset = Vector2(63, 63)
texture = ExtResource("1_um8lo")

[node name="EyeLeft" type="Sprite2D" parent="TextureRect"]
position = Vector2(45, 54)
texture = ExtResource("3_j0pa4")

[node name="EyeRight" type="Sprite2D" parent="TextureRect"]
position = Vector2(84, 54)
texture = ExtResource("3_j0pa4")

[node name="Mouth" type="TextureRect" parent="TextureRect"]
offset_left = 53.0
offset_top = 56.0
offset_right = 93.0
offset_bottom = 96.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_lb1et")
expand_mode = 4
stretch_mode = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hnvup")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 49

[node name="TongueCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="PickupDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector"]
shape = SubResource("CircleShape2D_j0pa4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ec3bh")
volume_db = -10.0

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -49.0
offset_top = 33.0
offset_right = 54.0
offset_bottom = 43.0
theme_override_styles/background = SubResource("StyleBoxFlat_6e0b6")
theme_override_styles/fill = SubResource("StyleBoxFlat_opta0")
max_value = 1.0
show_percentage = false

[node name="PlayerResettingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4u6q8")

[node name="GroundCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCheck"]
shape = SubResource("CircleShape2D_4u6q8")

[node name="Engine" type="Node" parent="."]
script = ExtResource("8_6e0b6")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_entered" from="PickupDetector" to="." method="_on_pickup_detector_body_shape_entered"]
